--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "typescript": "^3.8.3"
   },
   "scripts": {
-    "start": "set PORT=8080 && react-scripts start",
+    "start": "PORT=8080 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
