add youtube api file and package, insert trailer row in homepage, fix some styles

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-toastify": "^6.2.0",
     "reactstrap": "^8.5.1",
     "styled-components": "^5.1.1",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "youtube-search": "^1.1.6"
   },
   "scripts": {
     "start": "PORT=8080 react-scripts start",
